# playground

./: .gitignore
c/avoid/: Makefile
c/cpong/: Makefile
c/gserver/: Makefile  TODO.md
c/k_hello_world/: Makefile  hello-1.c  hello-1.h  mykmod.c
c/list/: Makefile
c/multiplayer/: Makefile
c/sdl2_template/: Makefile
c/select/: Makefile  client.c  server.c
c/socket/: Makefile  client.c  server.c
c/sudoku/: Makefile
c/unit_testing/: Makefile
cli/go/: go.mod
cli/python/rich/: pyproject.toml
cli/python/rich/src/: main.py
cli/rust/: Cargo.toml
cpp/aoc_2022/: Makefile  main.cpp
cpp/opengl_1/: Makefile  opengl
cpp/opongl/: Makefile  format.sh
cpp/pong/: Makefile  format.sh
go/bataille/: TODO  credits.md  go.mod  main.go
go/blockchain/: Makefile
go/cli/: main.go
go/comptes/: Taskfile.yml  config.yml  go.mod  go.sum  main.go
go/dtbot/: go.mod  main.go
go/ebiten_inventory/: go.mod  main.go
go/gomultisocket/: client.go  go.mod  server.go
go/gopong/: Makefile  go.mod  main.go
go/goserver/: TODO.md  Taskfile.yml  go.mod  go.sum  goserver.yml
go/pongiten/: Makefile  go.mod
go/pongiten2/: ball.go  (+8 more)
gopong/: main.go
python/: billards.py  ideas.md  pygame_template.py
python/multiplayer/: pyproject.toml
python/multiplayer/multiplayer/client/: client.py  main.py
python/multiplayer/multiplayer/server/: main.py  server.py
python/pygame/multiplayer/: config.ini  lint.py  pyproject.toml  server.ini
python/pygame/multiplayer/multiplayer/client/: client.py  main.py
python/pygame/multiplayer/multiplayer/server/: main.py  server.py
(+395 files in other folders)
