[tool.poetry]
name = "multiplayer"
version = "0.1.0"
description = ""
authors = ["Geoffrey <pypaut@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"
configparser = "^7.0.0"

[tool.poetry.scripts]
server = "multiplayer.server.main:main"
client = "multiplayer.client.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

